// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Student Navbar Component has actions menu that matches snapshot 1`] = `
<div
  className="actions-menu dropdown btn-group"
>
  <a
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle"
    href="#"
    id="actions-menu"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
  >
    <i
      className="tutor-icon fa fa-bars"
      role="presentation"
      type="bars"
    />
    <span
      className="control-label"
      title="Menu and settings"
    >
      Menu
    </span>
    <i
      className="tutor-icon fa fa-angle-down toggle"
      role="presentation"
      type="angle-down"
    />
  </a>
  <ul
    aria-labelledby="actions-menu"
    className="dropdown-menu"
    role="menu"
  >
    <li
      className="myCourses"
      role="presentation"
      style={undefined}
    >
      <a
        data-name="myCourses"
        href="/dashboard"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <div
          className="tour-anchor"
          data-tour-anchor-id="menu-option-myCourses"
          id="menu-option-myCourses"
        >
          My Courses
        </div>
      </a>
    </li>
    <li
      className="divider"
      onKeyDown={[Function]}
      role="separator"
      style={undefined}
    />
    <li
      className="dashboard"
      role="presentation"
      style={undefined}
    >
      <a
        data-name="dashboard"
        href="/course/1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <div
          className="tour-anchor"
          data-tour-anchor-id="menu-option-dashboard"
          id="menu-option-dashboard"
        >
          Dashboard
        </div>
      </a>
    </li>
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="/book/1"
        name="browseBook"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
        target="_blank"
      >
        <div
          className="tour-anchor"
          data-tour-anchor-id="menu-option-browse-book"
          id="menu-option-browse-book"
        >
          Browse the Book
        </div>
      </a>
    </li>
    <li
      className="viewScores"
      role="presentation"
      style={undefined}
    >
      <a
        data-name="viewScores"
        href="/course/1/scores"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <div
          className="tour-anchor"
          data-tour-anchor-id="menu-option-viewScores"
          id="menu-option-viewScores"
        >
          Scores
        </div>
      </a>
    </li>
    <li
      className="viewPerformanceGuide"
      role="presentation"
      style={undefined}
    >
      <a
        data-name="viewPerformanceGuide"
        href="/course/1/guide"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <div
          className="tour-anchor"
          data-tour-anchor-id="menu-option-viewPerformanceGuide"
          id="menu-option-viewPerformanceGuide"
        >
          Performance Forecast
        </div>
      </a>
    </li>
    <li
      className="changeStudentId"
      role="presentation"
      style={undefined}
    >
      <a
        data-name="changeStudentId"
        href="/course/1/change-student-id"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <div
          className="tour-anchor"
          data-tour-anchor-id="menu-option-changeStudentId"
          id="menu-option-changeStudentId"
        >
          Change Student ID
        </div>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Teacher Navbar Component has actions menu that matches snapshot 1`] = `
<div
  className="actions-menu dropdown btn-group"
>
  <a
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle"
    href="#"
    id="actions-menu"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
  >
    <i
      className="tutor-icon fa fa-bars"
      role="presentation"
      type="bars"
    />
    <span
      className="control-label"
      title="Menu and settings"
    >
      Menu
    </span>
    <i
      className="tutor-icon fa fa-angle-down toggle"
      role="presentation"
      type="angle-down"
    />
  </a>
  <ul
    aria-labelledby="actions-menu"
    className="dropdown-menu"
    role="menu"
  >
    <li
      className="myCourses"
      role="presentation"
      style={undefined}
    >
      <a
        data-name="myCourses"
        href="/dashboard"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <div
          className="tour-anchor"
          data-tour-anchor-id="menu-option-myCourses"
          id="menu-option-myCourses"
        >
          My Courses
        </div>
      </a>
    </li>
    <li
      className="divider"
      onKeyDown={[Function]}
      role="separator"
      style={undefined}
    />
    <li
      className="dashboard"
      role="presentation"
      style={undefined}
    >
      <a
        data-name="dashboard"
        href="/course/1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <div
          className="tour-anchor"
          data-tour-anchor-id="menu-option-dashboard"
          id="menu-option-dashboard"
        >
          Dashboard
        </div>
      </a>
    </li>
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="/book/1"
        name="browseBook"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
        target="_blank"
      >
        <div
          className="tour-anchor"
          data-tour-anchor-id="menu-option-browse-book"
          id="menu-option-browse-book"
        >
          Browse the Book
        </div>
      </a>
    </li>
    <li
      className="viewPerformanceGuide"
      role="presentation"
      style={undefined}
    >
      <a
        data-name="viewPerformanceGuide"
        href="/course/1/guide"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <div
          className="tour-anchor"
          data-tour-anchor-id="menu-option-viewPerformanceGuide"
          id="menu-option-viewPerformanceGuide"
        >
          Performance Forecast
        </div>
      </a>
    </li>
    <li
      className="viewQuestionsLibrary"
      role="presentation"
      style={undefined}
    >
      <a
        data-name="viewQuestionsLibrary"
        href="/course/1/questions"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <div
          className="tour-anchor"
          data-tour-anchor-id="menu-option-viewQuestionsLibrary"
          id="menu-option-viewQuestionsLibrary"
        >
          Question Library
        </div>
      </a>
    </li>
    <li
      className="viewScores"
      role="presentation"
      style={undefined}
    >
      <a
        data-name="viewScores"
        href="/course/1/scores"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <div
          className="tour-anchor"
          data-tour-anchor-id="menu-option-viewScores"
          id="menu-option-viewScores"
        >
          Student Scores
        </div>
      </a>
    </li>
    <li
      className="courseSettings"
      role="presentation"
      style={undefined}
    >
      <a
        data-name="courseSettings"
        href="/course/1/settings"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <div
          className="tour-anchor"
          data-tour-anchor-id="menu-option-courseSettings"
          id="menu-option-courseSettings"
        >
          Course Settings
        </div>
      </a>
    </li>
    <li
      className="courseRoster"
      role="presentation"
      style={undefined}
    >
      <a
        data-name="courseRoster"
        href="/course/1/roster"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <div
          className="tour-anchor"
          data-tour-anchor-id="menu-option-courseRoster"
          id="menu-option-courseRoster"
        >
          Course Roster
        </div>
      </a>
    </li>
    <li
      className="divider"
      onKeyDown={[Function]}
      role="separator"
      style={undefined}
    />
    <li
      className="createNewCourse"
      role="presentation"
      style={undefined}
    >
      <a
        data-name="createNewCourse"
        href="/new-course"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <div
          className="tour-anchor"
          data-tour-anchor-id="menu-option-createNewCourse"
          id="menu-option-createNewCourse"
        >
          Create a Course
        </div>
      </a>
    </li>
    <li
      className="createNewCourse"
      role="presentation"
      style={undefined}
    >
      <a
        data-name="createNewCourse"
        href="/new-course/1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <div
          className="tour-anchor"
          data-tour-anchor-id="menu-option-clone-course"
          id="menu-option-clone-course"
        >
          Copy this Course
        </div>
      </a>
    </li>
    <li
      className="divider"
      onKeyDown={[Function]}
      role="separator"
      style={undefined}
    />
  </ul>
</div>
`;
